# actix-web-demo

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  configuration.yaml  docker-compose.yml  key.pem  spec.yaml  sqlx-data.json  test-cert.pem
.github/workflows/: rust.yml
migrations/: 20211203195357_create_subscriptions_table.sql  20211203195357_create_subscriptions_table.up.sql  20220208191528_create_user_table.sql  20220208191528_create_user_table.up.sql  20220331171509_add_account_table.up.sql  20220331171509_create_accounts_and_transfers.up.sql  20220331171509_create_accounts_transfers_transactions.down.sql  20220331171509_create_accounts_transfers_transactions.up.sql  20220430152524_create_role_table.down.sql  20220430152524_create_role_table.up.sql  20220910101237_create_audit_log.down.sql  20220910101237_create_audit_log.up.sql  20220910160941_create_request_log.down.sql  20220910160941_create_request_log.up.sql
proto/: account.proto  string.proto
resources/: signing_private_key_encrypted.pem  signing_public_key.pem
scripts/: init_db.sh
src/: configuration.rs  error.rs  lib.rs  logging.rs  main.rs  repository.rs  security.rs  startup.rs  telemetry.rs  validated.rs  validation.rs
src/api/: accounts.rs  auth.rs  mod.rs  subscription.rs  user.rs
src/db/: mod.rs  subscription.rs  user.rs
src/graphql/: mod.rs  schema.rs
src/grpc/: account.rs  mod.rs  string.rs
src/infra/: audit_log.rs  configuration.rs  error.rs  logging.rs  mod.rs  validation.rs
src/infra/middleware/: authentication_filter.rs  authenticator.rs  digest_filter.rs  header_setter.rs  jwt_filter.rs  mod.rs  request_logger.rs  signature_filter.rs
src/infra/security/: headers.rs  jwt.rs  mod.rs  signature.rs
src/middleware/: digest_filter.rs  mod.rs  request_wrapper.rs  response_appender.rs  security.rs  signature_filter.rs  validators.rs
src/model/: account_model.rs  mod.rs  subscription.rs  transfer_model.rs  user.rs  user_model.rs
src/repository/: account_repository.rs  audit_log_repository.rs  mod.rs  request_repository.rs  transfer_repository.rs  user_repository.rs
src/rest/: account_api.rs  health_check.rs  mod.rs  token.rs  transfer_api.rs  user_api.rs
src/routes/: client_context.rs  health_check.rs  mod.rs  subscription.rs  subscriptions.rs  user.rs
src/security/: jwt.rs  signature.rs
src/service/: account.rs  auth.rs  health_check.rs  login.rs  mod.rs  token.rs
src/service/account/: account_api.rs  account_model.rs  account_repository.rs  mod.rs
src/service/deposit/: deposit_api.rs  deposit_model.rs  deposit_repository.rs  mod.rs
src/service/transfer/: mod.rs  transfer_api.rs  transfer_repository.rs
src/service/user/: mod.rs  user_api.rs  user_db.rs
src/service/withdrawal/: mod.rs  withdrawal_api.rs  withdrawal_model.rs  withdrawal_repository.rs
tests/: api.rs  health_check.rs  lib.rs  test-signing-key.pem  wrong-test-signing-key.pem
tests/api/: accounts.rs  auth.rs  mod.rs
tests/common/: mod.rs
tests/db/: connect.rs  mod.rs  subscription.rs
tests/repository/: connect.rs
tests/rest/: account_test.rs  auth_test.rs  digest_test.rs  security_test.rs  signature_test.rs  transfer_test.rs  user_test.rs
tests/service/: account.rs  account_test.rs  auth.rs  auth_test.rs  digest_test.rs  mod.rs  security.rs  security_test.rs  signature_test.rs  transfer_test.rs  user_test.rs
tests/sql/: accounts.sql
