[package]
name = "actix-web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-http = "3.0"
actix-web-httpauth = "0.6.0-beta.6"
tokio = "1.14.0"
serde = "1.0.130"
serde_json = "1.0.78"
config = "0.11.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
uuid = { version =  "0.8.2", features = ["v4", "serde"] }
chrono = { version = "0.4.15", features = ["serde"] }
thiserror = "1.0.30"

tracing = { version = "0.1.19", features = ["log"] }
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.4", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.0-beta.6"

derive_more = "0.99.17"
futures = "0.3.19"
bcrypt = "0.10.1"
jsonwebtoken = "8.0.1"
base64 = "0.13.0"
console-subscriber = "0.1.3"
validator = { version = "0.14.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "migrate",
    "any"
]

[dev-dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
actix-rt = "2.5.0"
once_cell = "1.9.0"
