[package]
name = "actix-web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Actix
actix-web = { version = "4.1.0", features = ["openssl"] }
actix-http = "3.2.1"
actix-web-httpauth = "0.7.0"
actix-web-grants = "3.0.0"
actix-web-lab = "0.16.1"
actix-cors = "0.6.1"
paperclip = { version = "0.7.0", features = ["actix4", "swagger-ui"] }

# Tools
itertools = "0.10.3"

tokio = "1.20.0"
serde = "1.0.130"
serde_json = "1.0.78"
config = "0.13.1"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
chrono = { version = "0.4.15", features = ["serde"] }
thiserror = "1.0.30"
futures = "0.3.19"
juniper = "0.15.9"

derive_more = "0.99.17"
async-trait = "0.1.53"

# Tracing
tracing = { version = "0.1.19", features = ["log"] }
tracing-subscriber = { version = "0.3.4", features = [
  "registry",
  "env-filter",
  "json",
] }
tracing-log = "0.1.2"
tracing-actix-web = "0.6.0"
console-subscriber = "0.1.6"

# Security and validation
bcrypt = "0.13.0"
jsonwebtoken = "8.0.1"
base64 = "0.13.0"
validator = { version = "0.15.0", features = ["derive"] }
openssl = "0.10.40"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "sqlite",
  "uuid",
  "chrono",
  "migrate",
  "any",
  "offline",
]

[dev-dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
once_cell = "1.9.0"
