[package]
name = "actix-web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Actix
actix-web = { version = "4.1.0" }
actix-http = "3.2.1"
actix-web-httpauth = "0.8.0"
actix-web-grants = "3.0.0"
actix-web-lab = "0.17.0"
actix-cors = "0.6.1"
paperclip = { version = "0.7.0", features = ["actix4", "swagger-ui"] }
axum = "0.5.15"

# Tools
itertools = "0.10.3"

tokio = "1.24.2"
serde = "1.0.130"
serde_json = "1.0.78"
config = "0.13.1"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
thiserror = "1.0.30"
anyhow = { version = "1.0.60", features = ["backtrace"] }
futures = "0.3.19"
juniper = { version = "0.15.11", default-features = false, features = [
  "schema-language",
  "url",
  "uuid",
] }

derive_more = "0.99.17"
async-trait = "0.1.53"

# Tracing
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = [
  "registry",
  "env-filter",
  "json",
] }
tracing-log = "0.1.3"
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
console-subscriber = "0.1.7"

# OpenTelemetry
tracing-opentelemetry = "0.17.4"
opentelemetry-jaeger = "0.16.0"
opentelemetry = { version = "0.17.0", default-features = false, features = [
  "trace",
] }

# Security and validation
bcrypt = "0.13.0"
jsonwebtoken = "8.1.1"
base64 = "0.13.0"
validator = { version = "0.16.0", features = ["derive"] }
openssl = "0.10.60"

# gRPC
tonic = { version = "0.8.0", features = ["tls"] }
prost = "0.11.0"
hyper = "0.14.20"
http = "0.2.8"
derive_builder = "0.11.2"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "any",
  "offline",
]

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
once_cell = "1.13.1"

[build-dependencies]
tonic-build = "0.8.0"
